[gd_scene load_steps=15 format=3 uid="uid://dd14ac41x8myt"]

[ext_resource type="Script" path="res://base.gd" id="1_lds57"]
[ext_resource type="Texture2D" uid="uid://bv4fr7ah70tbu" path="res://img/tiles.png" id="2_paqw5"]
[ext_resource type="Script" path="res://script/pipe.gd" id="3_v187o"]
[ext_resource type="PackedScene" uid="uid://c2k318ixartie" path="res://prefab/player.tscn" id="4_lnb45"]
[ext_resource type="PackedScene" uid="uid://dldree3yvcavu" path="res://prefab/torch.tscn" id="5_dvq8j"]
[ext_resource type="PackedScene" uid="uid://sxghwvjl3l3a" path="res://prefab/Button.tscn" id="6_yy1bn"]
[ext_resource type="PackedScene" uid="uid://cigd66l7ssi6x" path="res://prefab/pipe.tscn" id="7_mqoi0"]
[ext_resource type="Script" path="res://gameOverControl.gd" id="8_i4jjt"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3urls"]
texture = ExtResource("2_paqw5")
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
7:1/0 = 0
8:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
2:2/0 = 0
3:2/0 = 0
5:2/0 = 0
7:2/0 = 0
8:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
1:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
17:5/0 = 0
18:5/0 = 0
4:6/0 = 0
7:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
0:7/0 = 0
1:7/0 = 0
7:7/0 = 0
4:8/0 = 0
7:8/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0

[sub_resource type="TileSet" id="TileSet_0meui"]
sources/0 = SubResource("TileSetAtlasSource_3urls")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hj3wu"]
texture = ExtResource("2_paqw5")
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
7:1/0 = 0
8:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
2:2/0 = 0
3:2/0 = 0
5:2/0 = 0
7:2/0 = 0
8:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
1:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
17:5/0 = 0
18:5/0 = 0
4:6/0 = 0
7:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
0:7/0 = 0
1:7/0 = 0
7:7/0 = 0
4:8/0 = 0
7:8/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0

[sub_resource type="TileSet" id="TileSet_4rluo"]
sources/0 = SubResource("TileSetAtlasSource_hj3wu")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_d2d4e"]
texture = ExtResource("2_paqw5")
10:0/0 = 0
10:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:0/0/physics_layer_0/angular_velocity = 0.0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:0/0 = 0
11:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:0/0/physics_layer_0/angular_velocity = 0.0
11:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:0/0 = 0
12:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:0/0/physics_layer_0/angular_velocity = 0.0
13:0/0 = 0
13:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:0/0/physics_layer_0/angular_velocity = 0.0
14:0/0 = 0
14:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:0/0/physics_layer_0/angular_velocity = 0.0
15:0/0 = 0
15:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:0/0/physics_layer_0/angular_velocity = 0.0
16:0/0 = 0
16:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:0/0/physics_layer_0/angular_velocity = 0.0
17:0/0 = 0
17:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:0/0/physics_layer_0/angular_velocity = 0.0
18:0/0 = 0
18:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:0/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
8:1/0 = 0
8:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:1/0/physics_layer_0/angular_velocity = 0.0
10:1/0 = 0
10:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:1/0/physics_layer_0/angular_velocity = 0.0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:1/0 = 0
11:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:1/0/physics_layer_0/angular_velocity = 0.0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:1/0 = 0
12:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:1/0/physics_layer_0/angular_velocity = 0.0
13:1/0 = 0
13:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:1/0/physics_layer_0/angular_velocity = 0.0
14:1/0 = 0
14:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:1/0/physics_layer_0/angular_velocity = 0.0
15:1/0 = 0
15:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:1/0/physics_layer_0/angular_velocity = 0.0
16:1/0 = 0
16:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:1/0/physics_layer_0/angular_velocity = 0.0
17:1/0 = 0
17:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:1/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
7:2/0 = 0
7:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:2/0/physics_layer_0/angular_velocity = 0.0
8:2/0 = 0
8:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:2/0/physics_layer_0/angular_velocity = 0.0
10:2/0 = 0
10:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:2/0/physics_layer_0/angular_velocity = 0.0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:2/0 = 0
11:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:2/0/physics_layer_0/angular_velocity = 0.0
11:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:2/0 = 0
12:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:2/0/physics_layer_0/angular_velocity = 0.0
13:2/0 = 0
13:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:2/0/physics_layer_0/angular_velocity = 0.0
14:2/0 = 0
14:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:2/0/physics_layer_0/angular_velocity = 0.0
15:2/0 = 0
15:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:2/0/physics_layer_0/angular_velocity = 0.0
16:2/0 = 0
16:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:2/0/physics_layer_0/angular_velocity = 0.0
17:2/0 = 0
17:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:2/0/physics_layer_0/angular_velocity = 0.0
12:3/0 = 0
12:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:3/0/physics_layer_0/angular_velocity = 0.0
13:3/0 = 0
13:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:3/0/physics_layer_0/angular_velocity = 0.0
14:3/0 = 0
14:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:3/0/physics_layer_0/angular_velocity = 0.0
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
12:4/0 = 0
12:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:4/0/physics_layer_0/angular_velocity = 0.0
13:4/0 = 0
13:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:4/0/physics_layer_0/angular_velocity = 0.0
14:4/0 = 0
14:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:4/0/physics_layer_0/angular_velocity = 0.0
15:4/0 = 0
15:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:4/0/physics_layer_0/angular_velocity = 0.0
16:4/0 = 0
16:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:4/0/physics_layer_0/angular_velocity = 0.0
17:4/0 = 0
17:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:4/0/physics_layer_0/angular_velocity = 0.0
18:4/0 = 0
18:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:4/0/physics_layer_0/angular_velocity = 0.0
4:5/0 = 0
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0
5:5/0 = 0
5:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:5/0/physics_layer_0/angular_velocity = 0.0
6:5/0 = 0
6:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:5/0/physics_layer_0/angular_velocity = 0.0
7:5/0 = 0
7:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:5/0/physics_layer_0/angular_velocity = 0.0
12:5/0 = 0
12:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:5/0/physics_layer_0/angular_velocity = 0.0
13:5/0 = 0
13:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:5/0/physics_layer_0/angular_velocity = 0.0
14:5/0 = 0
14:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:5/0/physics_layer_0/angular_velocity = 0.0
17:5/0 = 0
17:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:5/0/physics_layer_0/angular_velocity = 0.0
18:5/0 = 0
18:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:5/0/physics_layer_0/angular_velocity = 0.0
4:6/0 = 0
4:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:6/0/physics_layer_0/angular_velocity = 0.0
7:6/0 = 0
7:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:6/0/physics_layer_0/angular_velocity = 0.0
15:6/0 = 0
15:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:6/0/physics_layer_0/angular_velocity = 0.0
16:6/0 = 0
16:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
16:6/0/physics_layer_0/angular_velocity = 0.0
17:6/0 = 0
17:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:6/0/physics_layer_0/angular_velocity = 0.0
18:6/0 = 0
18:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:6/0/physics_layer_0/angular_velocity = 0.0
0:7/0 = 0
0:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:7/0/physics_layer_0/angular_velocity = 0.0
1:7/0 = 0
1:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:7/0/physics_layer_0/angular_velocity = 0.0
7:7/0 = 0
7:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:7/0/physics_layer_0/angular_velocity = 0.0
4:8/0 = 0
4:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:8/0/physics_layer_0/angular_velocity = 0.0
7:8/0 = 0
7:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:8/0/physics_layer_0/angular_velocity = 0.0
4:9/0 = 0
4:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:9/0/physics_layer_0/angular_velocity = 0.0
5:9/0 = 0
5:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:9/0/physics_layer_0/angular_velocity = 0.0
6:9/0 = 0
6:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:9/0/physics_layer_0/angular_velocity = 0.0
7:9/0 = 0
7:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:9/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_ilc4t"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_d2d4e")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_lds57")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(187, 470)
zoom = Vector2(3, 3)

[node name="tilemap" type="Node2D" parent="."]

[node name="background" type="TileMap" parent="tilemap"]
modulate = Color(0.85, 0.85, 0.85, 1)
texture_filter = 1
tile_set = SubResource("TileSet_0meui")
format = 2
layer_0/tile_data = PackedInt32Array(2097154, 786432, 3, 2162690, 786432, 4, 2228226, 786432, 5, 2097155, 851968, 3, 2162691, 851968, 4, 2228227, 851968, 5, 2097156, 917504, 3, 2162692, 917504, 4, 2228228, 917504, 5, 2097157, 786432, 3, 2162693, 786432, 4, 2228229, 786432, 5, 2097158, 851968, 3, 2162694, 851968, 4, 2228230, 851968, 5, 2097159, 917504, 3, 2162695, 917504, 4, 2228231, 917504, 5, 2097160, 786432, 3, 2162696, 786432, 4, 2228232, 786432, 5, 2097161, 851968, 3, 2162697, 851968, 4, 2228233, 851968, 5, 2097162, 917504, 3, 2162698, 917504, 4, 2228234, 917504, 5, 2097163, 786432, 3, 2162699, 786432, 4, 2228235, 786432, 5, 2097164, 851968, 3, 2162700, 851968, 4, 2228236, 851968, 5, 2097165, 917504, 3, 2162701, 917504, 4, 2228237, 917504, 5, 2097166, 786432, 3, 2162702, 786432, 4, 2228238, 786432, 5, 2097167, 851968, 3, 2162703, 851968, 4, 2228239, 851968, 5, 2097168, 917504, 3, 2162704, 917504, 4, 2228240, 917504, 5, 2097169, 786432, 3, 2162705, 786432, 4, 2228241, 786432, 5, 2097170, 851968, 3, 2162706, 851968, 4, 2228242, 851968, 5, 2097171, 917504, 3, 2162707, 917504, 4, 2228243, 917504, 5, 1900561, 786432, 3, 1966097, 786432, 4, 2031633, 786432, 5, 1900562, 851968, 3, 1966098, 851968, 4, 2031634, 851968, 5, 1900563, 917504, 3, 1966099, 917504, 4, 2031635, 917504, 5, 1900564, 786432, 3, 1966100, 786432, 4, 2031636, 786432, 5, 1900565, 851968, 3, 1966101, 851968, 4, 2031637, 851968, 5, 1900566, 917504, 3, 1966102, 917504, 4, 2031638, 917504, 5, 2097172, 786432, 3, 2162708, 786432, 4, 2228244, 786432, 5, 2097173, 851968, 3, 2162709, 851968, 4, 2228245, 851968, 5, 2097174, 917504, 3, 2162710, 917504, 4, 2228246, 917504, 5, 1900558, 786432, 3, 1966094, 786432, 4, 2031630, 786432, 5, 1900559, 851968, 3, 1966095, 851968, 4, 2031631, 851968, 5, 1900560, 917504, 3, 1966096, 917504, 4, 2031632, 917504, 5, 1900555, 786432, 3, 1966091, 786432, 4, 2031627, 786432, 5, 1900556, 851968, 3, 1966092, 851968, 4, 2031628, 851968, 5, 1900557, 917504, 3, 1966093, 917504, 4, 2031629, 917504, 5, 1900552, 786432, 3, 1966088, 786432, 4, 2031624, 786432, 5, 1900553, 851968, 3, 1966089, 851968, 4, 2031625, 851968, 5, 1900554, 917504, 3, 1966090, 917504, 4, 2031626, 917504, 5, 1900549, 786432, 3, 1966085, 786432, 4, 2031621, 786432, 5, 1900550, 851968, 3, 1966086, 851968, 4, 2031622, 851968, 5, 1900551, 917504, 3, 1966087, 917504, 4, 2031623, 917504, 5, 1900546, 786432, 3, 1966082, 786432, 4, 2031618, 786432, 5, 1900547, 851968, 3, 1966083, 851968, 4, 2031619, 851968, 5, 1900548, 917504, 3, 1966084, 917504, 4, 2031620, 917504, 5, 1703938, 786432, 3, 1769474, 786432, 4, 1835010, 786432, 5, 1703939, 851968, 3, 1769475, 851968, 4, 1835011, 851968, 5, 1703940, 917504, 3, 1769476, 917504, 4, 1835012, 917504, 5, 1703941, 786432, 3, 1769477, 786432, 4, 1835013, 786432, 5, 1703942, 851968, 3, 1769478, 851968, 4, 1835014, 851968, 5, 1703943, 917504, 3, 1769479, 917504, 4, 1835015, 917504, 5, 1703944, 786432, 3, 1769480, 786432, 4, 1835016, 786432, 5, 1703945, 851968, 3, 1769481, 851968, 4, 1835017, 851968, 5, 1703946, 917504, 3, 1769482, 917504, 4, 1835018, 917504, 5, 1507336, 786432, 3, 1572872, 786432, 4, 1638408, 786432, 5, 1507337, 851968, 3, 1572873, 851968, 4, 1638409, 851968, 5, 1507338, 917504, 3, 1572874, 917504, 4, 1638410, 917504, 5, 1507339, 786432, 3, 1572875, 786432, 4, 1638411, 786432, 5, 1507340, 851968, 3, 1572876, 851968, 4, 1638412, 851968, 5, 1507341, 917504, 3, 1572877, 917504, 4, 1638413, 917504, 5, 1507342, 786432, 3, 1572878, 786432, 4, 1638414, 786432, 5, 1507343, 851968, 3, 1572879, 851968, 4, 1638415, 851968, 5, 1507344, 917504, 3, 1572880, 917504, 4, 1638416, 917504, 5, 1507345, 786432, 3, 1572881, 786432, 4, 1638417, 786432, 5, 1507346, 851968, 3, 1572882, 851968, 4, 1638418, 851968, 5, 1507347, 917504, 3, 1572883, 917504, 4, 1638419, 917504, 5, 1703953, 786432, 3, 1769489, 786432, 4, 1835025, 786432, 5, 1703954, 851968, 3, 1769490, 851968, 4, 1835026, 851968, 5, 1703955, 917504, 3, 1769491, 917504, 4, 1835027, 917504, 5, 1703956, 786432, 3, 1769492, 786432, 4, 1835028, 786432, 5, 1703957, 851968, 3, 1769493, 851968, 4, 1835029, 851968, 5, 1703958, 917504, 3, 1769494, 917504, 4, 1835030, 917504, 5, 1703950, 786432, 3, 1769486, 786432, 4, 1835022, 786432, 5, 1703951, 851968, 3, 1769487, 851968, 4, 1835023, 851968, 5, 1703952, 917504, 3, 1769488, 917504, 4, 1835024, 917504, 5, 1703947, 786432, 3, 1769483, 786432, 4, 1835019, 786432, 5, 1703948, 851968, 3, 1769484, 851968, 4, 1835020, 851968, 5, 1703949, 917504, 3, 1769485, 917504, 4, 1835021, 917504, 5, 1507333, 786432, 3, 1572869, 786432, 4, 1638405, 786432, 5, 1507334, 851968, 3, 1572870, 851968, 4, 1638406, 851968, 5, 1507335, 917504, 3, 1572871, 917504, 4, 1638407, 917504, 5, 1507330, 786432, 3, 1572866, 786432, 4, 1638402, 786432, 5, 1507331, 851968, 3, 1572867, 851968, 4, 1638403, 851968, 5, 1507332, 917504, 3, 1572868, 917504, 4, 1638404, 917504, 5, 1507348, 786432, 3, 1572884, 786432, 4, 1638420, 786432, 5, 1507349, 851968, 3, 1572885, 851968, 4, 1638421, 851968, 5, 1507350, 917504, 3, 1572886, 917504, 4, 1638422, 917504, 5)

[node name="decorative" type="TileMap" parent="tilemap"]
texture_filter = 1
format = 2

[node name="pipe" type="TileMap" parent="tilemap"]
texture_filter = 1
texture_repeat = 2
tile_set = SubResource("TileSet_4rluo")
format = 2
layer_0/name = "pipe"
layer_1/tile_data = PackedInt32Array()
script = ExtResource("3_v187o")

[node name="Timer" type="Timer" parent="tilemap/pipe"]
process_callback = 0

[node name="collision" type="TileMap" parent="tilemap"]
texture_filter = 1
tile_set = SubResource("TileSet_ilc4t")
format = 2
layer_0/tile_data = PackedInt32Array(2293762, 655360, 0, 2293763, 720896, 0, 2293764, 655360, 0, 2293765, 720896, 0, 2293766, 655360, 0, 2293767, 720896, 0, 2293768, 655360, 0, 2293769, 720896, 0, 2293770, 655360, 0, 2293771, 720896, 0, 2293772, 655360, 0, 2293773, 720896, 0, 2293774, 655360, 0, 2293775, 720896, 0, 2293776, 655360, 0, 2293777, 720896, 0, 2293778, 655360, 0, 2293779, 720896, 0, 2293780, 655360, 0, 2293781, 720896, 0, 2162689, 720896, 1, 2228225, 720896, 2, 2031617, 720896, 1, 2097153, 720896, 2, 1900545, 720896, 1, 1966081, 720896, 2, 1769473, 720896, 1, 1835009, 720896, 2, 1638401, 720896, 1, 1703937, 655360, 2, 1507329, 720896, 1, 1572865, 720896, 2, 2162710, 655360, 1, 2228246, 655360, 2, 2031638, 655360, 1, 2097174, 655360, 2, 1900566, 655360, 1, 1966102, 655360, 2, 1769494, 655360, 1, 1835030, 655360, 2, 1638422, 655360, 1, 1703958, 655360, 2, 1507350, 655360, 1, 1572886, 655360, 2, 1507330, 655360, 0, 1507331, 720896, 0, 1507332, 655360, 0, 1507333, 720896, 0, 1507334, 655360, 0, 1507335, 720896, 0, 1507336, 655360, 0, 1507337, 720896, 0, 1507338, 655360, 0, 1507339, 720896, 0, 1507340, 655360, 0, 1507341, 720896, 0, 1507342, 655360, 0, 1507343, 720896, 0, 1507344, 655360, 0, 1507345, 720896, 0, 1507346, 655360, 0, 1507347, 720896, 0, 2293782, 655360, 2, 2293761, 655360, 2, 2228233, 655360, 2, 2162697, 655360, 0, 2228229, 655360, 0, 2031630, 655360, 0, 2097166, 655360, 2, 2162702, 655360, 2, 2228238, 655360, 2, 1769487, 655360, 0, 1769486, 655360, 0, 1900564, 655360, 0, 1900565, 720896, 0, 2031633, 720896, 0, 2097169, 720896, 1, 2162705, 720896, 2, 2228241, 720896, 1, 1835017, 655360, 0, 1835018, 720896, 0, 1835015, 655360, 0, 1835016, 720896, 0, 1769475, 720896, 0, 1769476, 720896, 0, 1769474, 655360, 0)

[node name="CharacterBody2D" parent="." instance=ExtResource("4_lnb45")]
position = Vector2(107, 556)

[node name="torch" parent="." instance=ExtResource("5_dvq8j")]
position = Vector2(73, 431)

[node name="Button" parent="." node_paths=PackedStringArray("pipe") instance=ExtResource("6_yy1bn")]
position = Vector2(58, 557)
pipe = NodePath("../pipe")

[node name="pipe" parent="." instance=ExtResource("7_mqoi0")]
position = Vector2(-377, 210)

[node name="gameOverControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -70.0
offset_top = 326.0
offset_right = 441.0
offset_bottom = 608.0
script = ExtResource("8_i4jjt")

[node name="GameOver" type="MarginContainer" parent="gameOverControl"]
layout_mode = 0
offset_left = -1.0
offset_right = 510.0
offset_bottom = 282.0

[node name="VBoxContainer" type="VBoxContainer" parent="gameOverControl/GameOver"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="gameOverControl/GameOver/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "GAME OVER"

[node name="Restart" type="Button" parent="gameOverControl/GameOver/VBoxContainer"]
layout_mode = 2
text = "RESTART"

[node name="MainMenu" type="Button" parent="gameOverControl/GameOver/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[connection signal="timeout" from="tilemap/pipe/Timer" to="tilemap/pipe" method="_on_timer_timeout"]
[connection signal="pressed" from="gameOverControl/GameOver/VBoxContainer/Restart" to="." method="_on_button_pressed"]
[connection signal="pressed" from="gameOverControl/GameOver/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
